# agrosen-tech

./: .gitignore  README.md  docker-compose.yml  index.html  requirements.txt  tailwind.config.ts
backend/: Dockerfile  main.py  pyproject.toml  season.py  sensor.py  server.py
backend/readings/: ranges.py  reading.py
frontend/: .env  Dockerfile  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/.vercel/: project.json
frontend/src/: App.tsx  types.ts
frontend/src/api/: useGetMeasurements.ts
frontend/src/components/: AlertsPanel.tsx  Chatbot.tsx  Dashboard.tsx  ElectricalConductivity.tsx  HealthScore.tsx  NutrientCard.tsx  NutritionPlanner.tsx  PhenologyStage.tsx  ProgressBar.tsx  SensorGraphs.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Index.tsx
frontend/supabase/: config.toml
frontend/supabase/functions/poll-thingspeak/: index.ts
frontend/supabase/migrations/: 20251117125015_cbc51873-71d4-44ee-a7b9-4dcdca5133a4.sql
src/: index.css
src/components/: AlertsPanel.tsx  Chatbot.tsx  Dashboard.tsx  ElectricalConductivity.tsx  FeedbackForm.tsx  HealthScore.tsx  NutritionPlanner.tsx  PhenologyStage.tsx  SensorGraphs.tsx
src/integrations/supabase/: types.ts
src/pages/: Index.tsx
supabase/functions/chatbot/: index.ts
