[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "requests>=2.32.5",
    "types-flask-cors>=6.0.0.20250809",
    "types-requests>=2.32.4.20250913",
]
